# python-ci

./: .flake8  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs/html/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/src/: calculator.html
docs/html/_sources/: api.rst.txt  index.rst.txt
scripts/: generate_docs.py
src/: __init__.py  calculator.py
tests/: __init__.py  test_calculator.py
